# mpc

./: CHANGELOG.md  LICENSE  flake.nix  mpc.cabal
app/: Main.hs
network-simpler/: NetworkSimpler.hs
src/: DSL.hs  Interpreters.hs  LocalPrelude.hs  Protocols.hs
src/Interpreters/: MVar.hs  Socket.hs  Stats.hs
test/: Main.hs
