cabal-version:      3.4
name:               mpc
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/eyeinsky/mpc
license:            MIT
license-file:       LICENSE
author:             Markus Läll
maintainer:         markus.l2ll@gmail.com
category:           Cryptography
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
    hs-source-dirs:   src
    default-language: GHC2024

executable mpc
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.1,
        mpc

    hs-source-dirs:   app
    default-language: GHC2024

