cabal-version:      3.4
name:               mpc
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://github.com/eyeinsky/mpc
license:            MIT
license-file:       LICENSE
author:             Markus Läll
maintainer:         markus.l2ll@gmail.com
category:           Cryptography
build-type:         Simple
extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

common language
    default-language: GHC2021
    default-extensions:
        DerivingStrategies
        LambdaCase
        NoImplicitPrelude
        DerivingVia
        DataKinds
        GADTs
        MultiWayIf

library
    import:           warnings
    import:           language
    exposed-modules:
      , LocalPrelude
      , DSL
      , Interpreters
      , Interpreters.MVar
      , Interpreters.Socket
      , Interpreters.Stats
      , Protocols
    build-depends:
      , mpc:network-simpler
      , fixedlist
      , base ^>=4.18.2.1
      , free
      , mtl
      , bytestring
      , directory
      , random
      , network
    hs-source-dirs:   src

executable mpc
    import:           warnings
    import:           language
    main-is:          Main.hs
    build-depends:
      , mpc
      , mpc:network-simpler

      , base
      , mtl
      , random
      , optparse-applicative
      , network
    hs-source-dirs:   app

library network-simpler
    import:           warnings
    import:           language
    hs-source-dirs:   network-simpler
    exposed-modules:  NetworkSimpler
    build-depends:
      , base ^>=4.18.2.1
      , network
      , process

test-suite mpc-test
    import:           warnings
    import:           language
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        mpc
      , base
      , tasty-hedgehog
      , tasty
      , hedgehog
      , network
